# HarmonyForge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  github-publish.md  name-ideas.md  quickstart-linux-macos.md  quickstart-windows.md
docs/plans/: 2026-02-09-harmonyforge-design.md
scripts/: plex_music_toolkit.py
src/plex_music_hygiene/: __init__.py  cli.py
tests/: test_cli_parser.py  test_entrypoints.py
